l'ajout du photo et nav bar

--- a/code/index.html
+++ b/code/index.html
@@ -3,10 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>our project</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <div>nnk,nk,</div>  
+<body classe="container">
+      <!-- section nav bar -->
+      <nav class="nav-gauche">
+            <div class="cercle-portrait">
+                <img src="images/face.jpg" alt="portrait img">
+            </div>
+       
+        <div class="blocs-menu">
+                <a href="#accueil">
+                    HOME
+                </a>
+        </div>
+        <div class="blocs-menu">
+                <a href="#pres">
+                    ABOUT
+                </a>
+         </div>
+        <div class="blocs-menu">
+                <a href="#port">
+                    MY PROJECTS
+                </a>
+        </div>
+        <div class="blocs-menu">
+                <a href="#range">
+                    SKILLS
+                </a>
+        </div>
+        <div class="blocs-menu">
+                <a href="#contact">
+                   CONTACT
+                </a>
+        </div>
+        <div class="blocs-menu">
+            <div class="logo-cercle">
+                <!-- <a href="#contact"> -->
+                    <img src="ressources/contact.svg" alt="logo contact">
+                <!-- </a> -->
+            </div>
+
+        </div>
+
+    </nav>
+
    
 </body>
 </html>
